[dashB] fix filtre archive, suppr filtre à planifier

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -12,21 +12,20 @@
     <mat-form-field>
       <mat-select placeholder="Statut..." [(ngModel)]="searchStatus">
         <mat-option >aucun</mat-option>
-        <mat-option value="completed">complété</mat-option>
-        <mat-option value="collaboratorInProgress">à compléter</mat-option>
-        <mat-option value="collaboratorSent">planifié</mat-option>
-        <mat-option value="archived">archivé</mat-option>
+        <mat-option value="COMPLETED">complété</mat-option>
+        <mat-option value="IN_PROGRESS">en cours</mat-option>
+        <mat-option value="ARCHIVED">archivé</mat-option>
       </mat-select>
     </mat-form-field>
   
     <mat-form-field>
       <mat-select placeholder="Patron..." [(ngModel)]="searchPatron">
         <mat-option >aucun</mat-option>
-        <mat-option value="AF-026067">aide financière</mat-option>
-        <mat-option value="A-2256">avance de voyage</mat-option>
-        <mat-option value="DA-87001">demande d'achat</mat-option>
-        <mat-option value="DP-35854">demande paiement</mat-option>
-        <mat-option value="RD-87001">rapport déplacement</mat-option>
+        <mat-option value="Aide financière">aide financière</mat-option>
+        <mat-option value="Avance de voyage">avance de voyage</mat-option>
+        <mat-option value="Demande d'achat">demande d'achat</mat-option>
+        <mat-option value="Demande de paiement">demande de paiement</mat-option>
+        <mat-option value="Rapport de déplacement">rapport déplacement</mat-option>
       </mat-select>
     </mat-form-field>
   
