--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -23,9 +23,9 @@
         <mat-option >aucun</mat-option>
         <mat-option value="Aide financière">aide financière</mat-option>
         <mat-option value="Avance de voyage">avance de voyage</mat-option>
-        <mat-option value="Demande d'achat">demande d'achat</mat-option>
+        <mat-option value="Demande d’achat">demande d'achat</mat-option>
         <mat-option value="Demande de paiement">demande de paiement</mat-option>
-        <mat-option value="Rapport de déplacement">rapport déplacement</mat-option>
+        <mat-option value="Rapport de déplacement">rapport de déplacement</mat-option>
       </mat-select>
     </mat-form-field>
   
