--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -52,17 +52,20 @@
 
 #card {
  width: 350px;
- margin: 20px;
+ margin-right: 40px;
  margin-bottom: 10px;
+ 
 }
 
 #card-array {
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
+  
  }
 
  #cards-container {
-  width:100%;
+  align-content: center;
  }
 
 .inProgress.mat-progress-bar,
