--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -46,9 +46,11 @@
   color: #8cc83c;
 }
 #archivedIcon {
-  color: #bbdeea;
+  color: #41aae6;
 }
-
+#canceledIcon {
+  color: #232323;
+}
 
 #card {
  width: 350px;
@@ -66,8 +68,7 @@
  }
 
 .inProgress.mat-progress-bar,
-.hasLate.mat-progress-bar,
-.refused.mat-progress-bar,
+.canceled.mat-progress-bar,
 .completed.mat-progress-bar,
 .archived.mat-progress-bar {
   width: 230px;
@@ -75,8 +76,7 @@
 }
 
 .inProgress .mat-progress-bar-buffer,
-.hasLate .mat-progress-bar-buffer,
-.refused .mat-progress-bar-buffer,
+.canceled .mat-progress-bar-buffer,
 .completed .mat-progress-bar-buffer,
 .archived .mat-progress-bar-buffer {
   background-color: white;
@@ -85,13 +85,9 @@
 .inProgress .mat-progress-bar-fill::after {
   background-color: #ffff00;
 }
-
-.hasLate .mat-progress-bar-fill::after {
-  background-color: #fa961e;
-}
   
-.refused .mat-progress-bar-fill::after {
-  background-color: #b91e32;
+.canceled .mat-progress-bar-fill::after {
+  background-color: #666666;
 }
 
 .completed .mat-progress-bar-fill::after {
