Adds commande checkboxes on demande-achat

--- a/client/src/app/templates/demande-achat/demande-achat.component.html
+++ b/client/src/app/templates/demande-achat/demande-achat.component.html
@@ -10,6 +10,19 @@
     </div>
   </div>
 
+  <!--Commande-->
+ <div class="section-rectangle" id="demandeur">
+    <h6>COMMANDE</h6>
+      <mat-grid-list cols="1" rowHeight="4em">
+        <mat-grid-tile>
+              <mat-checkbox>Standard</mat-checkbox>
+          <br>
+              <mat-checkbox>Entente</mat-checkbox>
+          <br>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </div>
+
  <!--Service des finances-->
  <div class="section-rectangle" id="demandeur">
   <h6>Réservé au Service des finances</h6>
