--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -51,10 +51,9 @@
 </mat-form-field>
 
 <div class="grid-container" [ngSwitch]="vueCarte">
-  À compléter <hr id="a-completer-ligne">
-
 
   <div *ngSwitchCase="'true'" id="cards-container">
+    À compléter <hr id="a-completer-ligne">
     <div id = "card-array">
       <div *ngFor="let card of displayedCards" id="card">
         <mat-card class="dashboard-card">
@@ -144,7 +143,7 @@
                   </ng-container>
                   <mat-row *matRowDef="let row; columns: cardCollaborateurs;"></mat-row>
                 </mat-table>
-
+                <!-- FIN liste de collaborateurs dans la carte -->
                 
                 <ng-container [ngSwitch]="determineState(card)">
                   <div *ngSwitchCase="'EDIT'">
@@ -177,6 +176,137 @@
           </mat-card-content>
         </mat-card>
       </div>
+    
+      
+    </div>
+  </div>
+
+  <div *ngSwitchCase="'true'" id="cards-container">
+    Autres <hr id="a-completer-ligne">
+    <div id = "card-array">
+      <div *ngFor="let card of displayedCards" id="card">
+        <mat-card class="dashboard-card">
+          <mat-card-content class="dashboard-card-content">
+            <ng-container id="card-header">
+              
+              <span id="card-titleAndType">
+                  {{card.nomFormulaire}}
+              </span>
+              <span id="card-dateAndAuthor">
+                  Créé le: {{card.creeLe|date:'dd-MM-yyyy'}}
+              </span> <br>
+              
+              <span id="carte-date-auteur">
+                  Auteur: {{card.auteur.nom}}
+              </span>
+            </ng-container>
+            <ng-container id="expansible">
+              <mat-expansion-panel>
+
+                <mat-expansion-panel-header [ngSwitch]="card.statut">
+                  <ng-container *ngSwitchCase="'IN_PROGRESS'">
+                    <div>
+                      <i *ngIf="calculateCompletionRate(card.collaborateurs) == 100 ; else unchecked"
+                        class="material-icons"> radio_button_checked </i>
+                      <ng-template #unchecked>
+                        <i class="material-icons"> radio_button_unchecked </i>
+                      </ng-template>
+                    </div>
+                    <mat-progress-bar class="inProgress" [mode]="determinate"
+                      [value]="calculateCompletionRate(card.collaborateurs)">
+                    </mat-progress-bar>
+                  </ng-container>
+                  <ng-container *ngSwitchCase="'COMPLETED'">
+                    <i class="material-icons" id="completedIcon"> check_circle </i>
+                    <mat-progress-bar class="completed"
+                    [mode]="determinate" [value]="100">
+                    </mat-progress-bar>
+                  </ng-container>
+                  <ng-container *ngSwitchCase="'ARCHIVED'">
+                    <i class="material-icons" id="archivedIcon"> check_box </i>
+                    <mat-progress-bar class="archived"
+                    [mode]="determinate" [value]="100">
+                    </mat-progress-bar>
+                  </ng-container>
+                  <ng-container *ngSwitchCase="'CANCELED'">
+                    <i class="material-icons" id="canceledIcon"> indeterminate_check_box </i>
+                    <mat-progress-bar class="canceled"
+                    [mode]="determinate" [value]="calculateCompletionRate(card.collaborateurs)">
+                    </mat-progress-bar>
+                  </ng-container>
+                </mat-expansion-panel-header>
+            
+                <!-- liste de collaborateurs dans la carte -->
+                <mat-table [dataSource]="card.collaborateurs" id="collaborateursList">
+                  <ng-container matColumnDef="collaborateursList">
+                    <td mat-cell *matCellDef="let collaborateur"> 
+                      <ng-container [ngSwitch]="collaborateur.acces"> <!-- another container for making switch work -->
+                        <div *ngSwitchCase="'COMPLETED'" class="collaborateurCompleted">
+                          <p>
+                            {{collaborateur.nom}}
+                          </p>
+                        </div>
+                        <div *ngSwitchCase="'PREVIEW'" class="collaborateurCompleted">
+                          <p>
+                            {{collaborateur.nom}}
+                          </p>
+                        </div>
+                        <div *ngSwitchCase="'EDITION'" class="collaborateurEdition">
+                          <p>
+                            {{collaborateur.nom}}
+                          </p>
+                        </div>
+                        
+                        <div *ngSwitchCase="'WAITING'" class="collaborateurWaiting">
+                          <p>
+                            {{collaborateur.nom}}
+                          </p>
+                        </div>
+                        <div *ngSwitchDefault class="collaborateurWaiting">
+                          <p>
+                            {{collaborateur.nom}}
+                          </p>
+                        </div>
+                      </ng-container>
+                    </td>
+                  </ng-container>
+                  <mat-row *matRowDef="let row; columns: cardCollaborateurs;"></mat-row>
+                </mat-table>
+                <!-- FIN liste de collaborateurs dans la carte -->
+                
+                <ng-container [ngSwitch]="determineState(card)">
+                  <div *ngSwitchCase="'EDIT'">
+                      
+                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'modify']">
+                      MODIFIER
+                    </button>
+                  
+                    
+                  </div>
+                  <div *ngSwitchCase="'VALIDATE'">
+                      
+                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'validate']">
+                      VALIDER
+                    </button>
+                    
+                  </div>
+                  <div *ngSwitchCase="'VIEW'">
+                      
+                    <button mat-raised-button id="modifier" [routerLink]="['/edit', card._id, 'view']">
+                      VISUALISER
+                    </button>
+                    
+                  </div>
+                </ng-container>
+                
+                
+              </mat-expansion-panel>
+            </ng-container>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    
+      
     </div>
   </div>
 
