Adds missing fields in aide-financiere.

--- a/client/src/app/templates/aide-financiere-form/app.af-form.css
+++ b/client/src/app/templates/aide-financiere-form/app.af-form.css
@@ -1,5 +1,9 @@
 @import url("../base-form.css");
 
+#form-date {
+  background-color: #CCD4DF;
+}
+
 #form-header {
   display: flex;
   flex-direction: row;
