--- a/client/src/app/templates/demande-achat/demande-achat.component.html
+++ b/client/src/app/templates/demande-achat/demande-achat.component.html
@@ -341,7 +341,7 @@
         </mat-form-field>
     </div>
 </div>
-<p>Référence/no. doc. physique <b>DA- 012944</b></p>
+<p>Référence/no. doc. physique <b>DA-012944</b></p>
 
 
 
