--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,2 @@
-<!-- <app-header></app-header>
-<router-outlet></router-outlet> -->
-<!-- <app-demande-achat></app-demande-achat> -->
-<app-af-form></app-af-form>
+<app-header></app-header>
+<router-outlet></router-outlet>
